--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "onix-position-setup",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Chess position constructor",
   "main": "built/index.js",
   "scripts": {
     "build": "tsc && webpack",
     "webpack": "webpack",
-    "publish": "tsc && webpack --config webpack.production.config.js",
+    "produce": "tsc && webpack --config webpack.production.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/DrNixx/onix-position-setup#readme",
   "dependencies": {
-    "onix-app": "^1.0.4",
-    "onix-board": "^1.0.10",
-    "onix-chess": "^1.0.6",
-    "onix-chess-ctrls": "^1.0.7",
-    "onix-core": "^1.1.24",
-    "onix-io": "^1.0.6",
-    "onix-ui": "^1.0.23",
+    "onix-app": "^1.0.5",
+    "onix-board": "^1.0.16",
+    "onix-chess": "^1.0.12",
+    "onix-chess-ctrls": "^1.0.9",
+    "onix-core": "^1.1.27",
+    "onix-io": "^1.0.7",
+    "onix-ui": "^1.0.31",
     "react": "^15.6.1",
     "react-dnd": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.17",
-    "@types/react": "^15.6.0",
+    "@types/node": "^8.0.20",
+    "@types/react": "^15.6.1",
     "awesome-typescript-loader": "^3.2.2",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.4.2",
