--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onix-position-setup",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Chess position constructor",
   "main": "built/index.js",
   "scripts": {
@@ -33,7 +33,8 @@
     "onix-io": "^1.0.7",
     "onix-ui": "^1.0.31",
     "react": "^15.6.1",
-    "react-dnd": "^2.4.0"
+    "react-dnd": "^2.4.0",
+    "warning": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.20",
@@ -41,7 +42,6 @@
     "awesome-typescript-loader": "^3.2.2",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.4.2",
-    "warning": "^3.0.0",
     "webpack": "^2.7.0"
   }
 }
