--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "onix-position-setup",
-  "version": "1.0.5",
+  "version": "1.1.6",
   "description": "Chess position constructor",
   "main": "built/index.js",
+  "types": "built/index.d.ts",
   "scripts": {
     "build": "tsc && webpack",
     "webpack": "webpack",
@@ -25,21 +26,23 @@
   },
   "homepage": "https://github.com/DrNixx/onix-position-setup#readme",
   "dependencies": {
-    "onix-app": "^1.0.5",
-    "onix-board": "^1.0.16",
-    "onix-chess": "^1.0.12",
-    "onix-chess-ctrls": "^1.0.9",
-    "onix-core": "^1.1.27",
-    "onix-io": "^1.0.7",
-    "onix-ui": "^1.0.31",
+    "lodash": "^4.17.4",
+    "onix-app": "^1.0.8",
+    "onix-board": "^1.1.17",
+    "onix-chess": "^1.1.14",
+    "onix-chess-ctrls": "^1.0.10",
+    "onix-core": "^1.2.28",
+    "onix-io": "^1.1.8",
+    "onix-ui": "^1.1.32",
     "react": "^15.6.1",
     "react-dnd": "^2.4.0",
     "warning": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.20",
+    "@types/lodash": "^4.14.73",
+    "@types/node": "^8.0.24",
     "@types/react": "^15.6.1",
-    "awesome-typescript-loader": "^3.2.2",
+    "awesome-typescript-loader": "^3.2.3",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.4.2",
     "webpack": "^2.7.0"
