--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "onix-position-setup",
-  "version": "1.1.8",
+  "version": "1.3.10",
   "description": "Chess position constructor",
   "main": "built/index.js",
   "types": "built/index.d.ts",
   "scripts": {
-    "build": "tsc && webpack",
-    "webpack": "webpack",
-    "produce": "tsc && webpack --config webpack.production.config.js",
+    "build": "tsc",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "public": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,7 +30,7 @@
     "onix-app": "^1.0.12",
     "onix-board": "^1.1.19",
     "onix-chess": "^1.1.16",
-    "onix-chess-ctrls": "^1.0.13",
+    "onix-chess-ctrls": "^1.2.15",
     "onix-core": "^1.2.32",
     "onix-io": "^1.1.12",
     "onix-ui": "^1.3.35",
@@ -42,9 +42,10 @@
     "@types/lodash": "^4.14.104",
     "@types/node": "^8.9.4",
     "@types/react": "^15.6.14",
-    "awesome-typescript-loader": "^3.5.0",
-    "source-map-loader": "^0.2.3",
-    "typescript": "^2.7.2",
-    "webpack": "^2.7.0"
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
