--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "onix-position-setup",
-  "version": "1.3.10",
+  "version": "1.3.11",
   "description": "Chess position constructor",
-  "main": "built/index.js",
-  "types": "built/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "start": "webpack-dev-server --open --config webpack.dev.js",
