--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "onix-position-setup",
-  "version": "1.3.11",
+  "version": "1.4.12",
   "description": "Chess position constructor",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "public": "webpack --config webpack.config.js",
+    "webpack": "webpack --config webpack.config.js",
+    "stats": "webpack --profile --json > stats.json",
+    "statsp": "webpack --profile --json --mode=production > stats.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,26 +27,29 @@
   },
   "homepage": "https://github.com/DrNixx/onix-position-setup#readme",
   "dependencies": {
-    "lodash": "^4.17.5",
-    "onix-app": "^1.0.12",
-    "onix-board": "^1.1.19",
-    "onix-chess": "^1.1.16",
-    "onix-chess-ctrls": "^1.2.15",
-    "onix-core": "^1.2.32",
-    "onix-io": "^1.1.12",
-    "onix-ui": "^1.3.35",
-    "react": "^15.6.2",
-    "react-dnd": "^2.5.4",
-    "warning": "^3.0.0"
+    "lodash-es": "^4.17.10",
+    "onix-app": "^1.5.20",
+    "onix-board": "^1.4.24",
+    "onix-chess": "^1.3.18",
+    "onix-chess-ctrls": "^1.3.17",
+    "onix-core": "^1.6.39",
+    "onix-io": "^1.6.18",
+    "onix-ui": "^1.5.37",
+    "react": "^16.4.1",
+    "react-dnd": "^5.0.0",
+    "react-dom": "^16.4.1",
+    "rxjs": "^6.2.1",
+    "warning": "^4.0.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.104",
-    "@types/node": "^8.9.4",
-    "@types/react": "^15.6.14",
+    "@types/lodash-es": "^4.17.0",
+    "@types/node": "^10.5.1",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "clean-webpack-plugin": "^0.1.19",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^3.0.8"
   }
 }
