--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "lodash-es": "^4.17.10",
     "onix-app": "^1.5.20",
-    "onix-board": "^1.4.24",
+    "onix-board": "^1.4.25",
     "onix-chess": "^1.3.18",
     "onix-chess-ctrls": "^1.3.17",
     "onix-core": "^1.6.39",
@@ -38,6 +38,7 @@
     "react": "^16.4.1",
     "react-dnd": "^5.0.0",
     "react-dom": "^16.4.1",
+    "redux": "^4.0.0",
     "rxjs": "^6.2.1",
     "warning": "^4.0.0"
   },
