--- a/package.json
+++ b/package.json
@@ -28,28 +28,29 @@
   "homepage": "https://github.com/DrNixx/onix-position-setup#readme",
   "dependencies": {
     "chessground": "^7.6.10",
-    "lodash-es": "^4.17.14",
-    "onix-app": "^1.6.23",
-    "onix-chess": "^1.3.20",
-    "onix-core": "^1.6.41",
-    "onix-io": "^2.7.24",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "classnames": "^2.2.6",
+    "lodash-es": "^4.17.15",
+    "onix-app": "^1.6.24",
+    "onix-chess": "^1.3.21",
+    "onix-core": "^1.6.42",
+    "onix-io": "^2.7.25",
+    "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dnd": "^5.0.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "redux": "^4.0.4",
-    "rxjs": "^6.5.2",
+    "rxjs": "^6.5.3",
     "warning": "^4.0.3"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^10.14.12",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
+    "@types/node": "^10.14.17",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "clean-webpack-plugin": "^0.1.19",
     "ts-loader": "^4.5.0",
-    "typescript": "^3.0.0",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "typescript": "^3.6.2",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   }
 }
