--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "compile": "cross-env NODE_ENV=production gulp compile",
     "webpack": "webpack --config webpack.config.js",
     "stats": "webpack --profile --json > stats.json",
     "statsp": "webpack --profile --json --mode=production > stats.json",
@@ -47,7 +48,16 @@
     "@types/node": "^10.14.17",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.26.7",
     "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^6.0.3",
+    "del": "^5.1.0",
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^5.0.1",
+    "gulp-watch": "^5.0.1",
     "ts-loader": "^4.5.0",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
