--- a/package.json
+++ b/package.json
@@ -35,19 +35,21 @@
     "onix-chess": "^1.3.21",
     "onix-core": "^1.6.42",
     "onix-io": "^2.7.25",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dnd": "^5.0.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.10.2",
     "redux": "^4.0.4",
     "rxjs": "^6.5.3",
     "warning": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^10.14.17",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
+    "@types/node": "^10.14.21",
+    "@types/react": "^16.9.6",
+    "@types/react-dom": "^16.9.2",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
@@ -56,11 +58,14 @@
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
+    "merge2": "^1.3.0",
     "ts-loader": "^4.5.0",
-    "typescript": "^3.6.2",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
