--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -18,7 +18,7 @@
         "outDir": "./dist"
     },
     "files": [
-        "src/index.ts",
+        "src/js/index.ts",
         "src/test/index.ts"
     ]
 }
