--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "tsc": "tsc",
+    "start": "cross-env NODE_ENV=development gulp",
     "build": "cross-env NODE_ENV=development gulp build",
     "compile": "cross-env NODE_ENV=production gulp compile",
     "webpack": "webpack --config webpack.config.js",
@@ -49,20 +50,29 @@
     "@types/node": "^10.14.21",
     "@types/react": "^16.9.6",
     "@types/react-dom": "^16.9.2",
+    "assets": "^3.0.1",
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.7",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^6.0.3",
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
+    "gulp-if": "^2.0.1",
+    "gulp-jsbeautifier": "^2.1.2",
+    "gulp-nunjucks-api": "git+https://github.com/einomi/gulp-nunjucks-api.git#d36149d834c315ee6a39a6ab18d21534e5cd511f",
+    "gulp-plumber": "^1.2.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
     "merge2": "^1.3.0",
+    "node-notifier": "^5.4.3",
     "onix-board-assets": "^3.2.17",
     "ts-loader": "^4.5.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
