--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
+    "json-loader": "^0.5.7",
     "merge2": "^1.3.0",
     "node-notifier": "^5.4.3",
     "onix-board-assets": "^3.2.17",
