--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "lodash-es": "^4.17.15",
     "onix-app": "^1.6.24",
     "onix-chess": "^1.3.21",
+    "onix-chess-ctrls": "^1.6.25",
     "onix-core": "^1.6.42",
     "onix-io": "^2.7.25",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.15",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dnd": "^5.0.0",
     "react-dom": "^16.12.0",
     "redux": "^4.0.4",
@@ -47,8 +48,8 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^10.17.5",
-    "@types/react": "^16.9.6",
+    "@types/node": "^10.17.6",
+    "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "assets": "^3.0.1",
     "bootstrap": "^4.3.1",
@@ -60,7 +61,7 @@
     "gulp": "^4.0.2",
     "gulp-if": "^2.0.1",
     "gulp-jsbeautifier": "^2.1.2",
-    "gulp-nunjucks-api": "git+https://github.com/einomi/gulp-nunjucks-api.git#d36149d834c315ee6a39a6ab18d21534e5cd511f",
+    "gulp-nunjucks-api": "^0.9.1",
     "gulp-plumber": "^1.2.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
@@ -68,7 +69,7 @@
     "json-loader": "^0.5.7",
     "merge2": "^1.3.0",
     "node-notifier": "^5.4.3",
-    "onix-board-assets": "^3.2.18",
+    "onix-board-assets": "^3.4.24",
     "ts-loader": "^4.5.0",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
