--- a/package.json
+++ b/package.json
@@ -30,37 +30,35 @@
   },
   "homepage": "https://github.com/DrNixx/onix-position-setup#readme",
   "dependencies": {
-    "chessground": "^7.6.10",
+    "chessground": "^7.6.12",
     "classnames": "^2.2.6",
     "lodash-es": "^4.17.15",
-    "onix-app": "^1.6.24",
-    "onix-chess": "^1.3.21",
-    "onix-chess-ctrls": "^1.6.29",
-    "onix-core": "^1.6.42",
-    "onix-io": "^2.7.25",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dnd": "^5.0.0",
-    "react-dom": "^16.12.0",
-    "redux": "^4.0.4",
-    "rxjs": "^6.5.3",
+    "onix-chess": "^3.3.3",
+    "onix-chess-ctrls": "^2.1.1",
+    "onix-core": "^1.8.0",
+    "onix-io-postmessage": "^1.0.6",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dnd": "^10.0.2",
+    "react-dom": "^16.13.1",
     "warning": "^4.0.3"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^10.17.6",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
+    "@types/node": "^13.9.4",
+    "@types/react": "^16.9.25",
+    "@types/react-dom": "^16.9.5",
     "assets": "^3.0.1",
-    "bootstrap": "^4.4.0",
+    "bootstrap": "^4.4.1",
     "browser-sync": "^2.26.7",
-    "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^6.0.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
-    "gulp-if": "^2.0.1",
-    "gulp-jsbeautifier": "^2.1.2",
+    "gulp-if": "^3.0.0",
+    "gulp-jsbeautifier": "^3.0.1",
     "gulp-nunjucks-api": "^0.9.1",
     "gulp-plumber": "^1.2.1",
     "gulp-sourcemaps": "^2.6.5",
@@ -68,12 +66,12 @@
     "gulp-watch": "^5.0.1",
     "json-loader": "^0.5.7",
     "merge2": "^1.3.0",
-    "node-notifier": "^5.4.3",
-    "onix-board-assets": "^3.4.27",
-    "ts-loader": "^4.5.0",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
+    "node-notifier": "^6.0.0",
+    "onix-board-assets": "^4.1.1",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0"
   }
