--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
-        "module": "esnext",
-        "target": "es5",
-        "lib": ["dom", "es2015.promise", "es2017"],
-        "noImplicitAny": false,
+        "module": "commonjs",
+        "target": "ES6",
+        "lib": ["DOM", "ES6"],
         "jsx": "react",
         "sourceMap": true,
-        "declaration": true,
+        "declaration": false,
         "strict": true,
-        "strictNullChecks": false,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        //"noUnusedParameters": true,
+        "strictNullChecks": true,
         "importHelpers": true,
         "preserveConstEnums": true,
         "removeComments": false,
