Add github workflows

--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,23 @@
+/.vscode
+/.github
 /node_modules
 /public
 /src/scss
 /test
-/tsconfig.json
 /*.config.js
 /*.js.map
 /.gitattributes
 /.gitignore
 /.npmignore
-/.vscode
 stats.json
 debug.log
+
+/gulp-tasks
+/config.js
+/global-data.json
+/gulpfile.js
+/package-lock.json
+/paths.js
+/tsconfig.json
+/tsconfig.webpack.json
+/webpack.config.js
