--- a/.github/workflows/npmjs.yml
+++ b/.github/workflows/npmjs.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 10.x
       - run: npm ci
-      - run: npm run produce
+      - run: npm run compile
       - run: npm test
 
   publish-npm:
@@ -29,7 +29,7 @@ jobs:
           node-version: 10.x
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm run produce
+      - run: npm run compile
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
