--- a/.npmignore
+++ b/.npmignore
@@ -1,23 +1,22 @@
 /.vscode
 /.github
+/.babelrc
+/gulp-tasks
 /node_modules
 /public
-/src/scss
 /test
-/*.config.js
-/*.js.map
+/src/templates
+/src/test
+/.browserslistrc
 /.gitattributes
 /.gitignore
 /.npmignore
-stats.json
-debug.log
-
-/gulp-tasks
 /config.js
-/global-data.json
 /gulpfile.js
 /package-lock.json
 /paths.js
 /tsconfig.json
 /tsconfig.webpack.json
 /webpack.config.js
+stats.json
+debug.log
