--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "webpack": "webpack --config webpack.config.js",
     "stats": "webpack --profile --json > stats.json",
     "statsp": "webpack --profile --json --mode=production > stats.json",
-    "test": "echo \"Warning: no test specified\""
+    "test": "mocha --recursive --require @babel/register --require ./test/helpers.js --require ./test/dom.js"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
     "classnames": "^2.2.6",
     "lodash-es": "^4.17.15",
     "onix-chess": "^4.1.1",
-    "onix-chess-ctrls": "^3.0.0",
+    "onix-chess-ctrls": "^3.0.1",
     "onix-core": "^3.0.0",
     "onix-io-postmessage": "^1.0.6",
     "react": "^16.13.1",
@@ -47,30 +47,50 @@
     "warning": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/register": "^7.9.0",
     "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.5",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "assets": "^3.0.1",
+    "autoprefixer": "^9.7.5",
     "bootstrap": "^4.4.1",
     "browser-sync": "^2.26.7",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
+    "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
     "gulp-jsbeautifier": "^3.0.1",
     "gulp-nunjucks-api": "^0.9.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
+    "jsdom": "^16.2.2",
     "json-loader": "^0.5.7",
     "merge2": "^1.3.0",
+    "mime": "^2.4.4",
+    "mocha": "^7.1.1",
     "node-notifier": "^6.0.0",
-    "onix-board-assets": "^4.1.1",
+    "onix-board-assets": "^4.2.0",
+    "postcss-assets": "^5.0.0",
+    "postcss-inline-svg": "^4.1.0",
+    "postcss-scss": "^2.0.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
