--- a/package.json
+++ b/package.json
@@ -33,40 +33,40 @@
   },
   "homepage": "https://github.com/DrNixx/onix-position-setup#readme",
   "dependencies": {
-    "chessground": "^7.7.2",
+    "chessground": "^7.9.3",
     "classnames": "^2.2.6",
     "lodash-es": "^4.17.15",
-    "onix-chess": "^4.2.0",
-    "onix-chess-ctrls": "^3.1.0",
-    "onix-core": "^3.1.4",
-    "onix-io-postmessage": "^1.0.7",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
+    "onix-chess": "^5.3.3",
+    "onix-chess-ctrls": "^4.0.0",
+    "onix-core": "^4.2.1",
+    "onix-io-postmessage": "^1.0.8",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
     "warning": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.10.4",
-    "@types/classnames": "^2.2.10",
-    "@types/enzyme": "^3.10.5",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/register": "^7.12.1",
+    "@types/classnames": "^2.2.11",
+    "@types/enzyme": "^3.10.8",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^14.0.14",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "assets": "^3.0.1",
-    "autoprefixer": "^9.8.4",
-    "bootstrap": "^4.5.0",
-    "browser-sync": "^2.26.7",
+    "autoprefixer": "^10.0.2",
+    "bootstrap": "^4.5.3",
+    "browser-sync": "^2.26.13",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-adapter-react-16": "^1.15.5",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
@@ -74,27 +74,27 @@
     "gulp-jsbeautifier": "^3.0.1",
     "gulp-nunjucks-api": "^0.9.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
     "gulp-watch": "^5.0.1",
-    "jsdom": "^16.2.2",
+    "jsdom": "^16.4.0",
     "json-loader": "^0.5.7",
     "merge2": "^1.4.1",
     "mime": "^2.4.6",
-    "mocha": "^8.0.1",
-    "node-notifier": "^7.0.1",
-    "onix-board-assets": "^4.2.0",
+    "mocha": "^8.2.1",
+    "onix-board-assets": "^4.3.1",
+    "postcss": "^8.1.7",
     "postcss-assets": "^5.0.0",
-    "postcss-inline-svg": "^4.1.0",
-    "postcss-scss": "^2.1.1",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.6",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.1",
+    "postcss-inline-svg": "^5.0.0",
+    "postcss-scss": "^3.0.4",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.0.5",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2",
     "webpack-hot-middleware": "^2.25.0"
   }
 }
