--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   "dependencies": {
     "chessground": "^7.9.3",
     "classnames": "^2.2.6",
-    "lodash-es": "^4.17.15",
-    "onix-chess": "^7.2.0",
-    "onix-chess-ctrls": "^4.2.8",
-    "onix-core": "^4.2.2",
-    "onix-io-postmessage": "^1.0.8",
+    "lodash": "^4.17.20",
+    "onix-chess": "^7.2.2",
+    "onix-chess-ctrls": "^4.2.10",
+    "onix-core": "^4.2.3",
+    "onix-io-postmessage": "^1.0.9",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
@@ -52,8 +52,8 @@
     "@babel/register": "^7.12.10",
     "@types/classnames": "^2.2.11",
     "@types/enzyme": "^3.10.8",
-    "@types/lodash-es": "^4.17.4",
-    "@types/node": "^14.14.14",
+    "@types/lodash": "^4.14.166",
+    "@types/node": "^14.14.16",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "assets": "^3.0.1",
@@ -85,15 +85,15 @@
     "merge2": "^1.4.1",
     "mime": "^2.4.7",
     "mocha": "^8.2.1",
-    "onix-board-assets": "^4.4.0",
+    "onix-board-assets": "^5.0.0",
     "postcss": "^8.2.1",
     "postcss-assets": "^5.0.0",
     "postcss-inline-svg": "^5.0.0",
     "postcss-scss": "^3.0.4",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.0",
     "webpack-dev-middleware": "^4.0.2",
     "webpack-hot-middleware": "^2.25.0"
   }
